Add support for multi-display framebuffer in simulation
- Refactor framebuffer structure to support multiple displays by introducing a new `sim_fb_s` structure.
- Update framebuffer initialization and management functions to handle multiple displays.
- Modify framebuffer vtable to point to the correct display context.
- Enhance X11 framebuffer functions to accept display number as a parameter.
- Update configuration to allow for multiple X11 windows.
- Adjust bringup process to register multiple framebuffer devices.
- Create a new defconfig for dual-screen configuration.

--- a/arch/sim/Kconfig
+++ b/arch/sim/Kconfig
@@ -453,6 +453,15 @@ config SIM_X11UPDATE_INTERVAL
 	---help---
 		 X11 update sleep time
 
+config SIM_X11NWINDOWS
+	int "Number of X11 windows"
+	default 1
+	range 1 4
+	---help---
+		Number of X11 windows to create for multi-screen simulation.
+		Each window will have its own framebuffer device (/dev/fb0, /dev/fb1, etc.).
+		Default: 1
+
 menu "Window Configuration"
 
 config SIM_FBHEIGHT
